[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Objects/Ball/BallWall.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.0
height = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 1 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BufferJump" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BallWall" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.5, 0.8 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -32 )
current = true
zoom = Vector2( 0.4, 0.4 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
offset_v = 0.2
drag_margin_left = 0.1
drag_margin_top = 0.5
drag_margin_right = 0.1
drag_margin_bottom = 0.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0
bus = "Sound"

[node name="Tween" type="Tween" parent="."]

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 3 )

[connection signal="timeout" from="Coyote" to="." method="_on_Coyote_timeout"]
[connection signal="timeout" from="BufferJump" to="." method="_on_Buffer_Jump_timeout"]
